--- a/src/app/Ui/Modules/Asignaciones/components/tabla-inventarios-asignados/tabla-inventarios-asignados.component.html
+++ b/src/app/Ui/Modules/Asignaciones/components/tabla-inventarios-asignados/tabla-inventarios-asignados.component.html
@@ -26,7 +26,7 @@
   </thead>
 
   <tbody class="divide-y divide-gray-200 ">
-    @for (item of datosInventariosFiltradoslista | paginate: { itemsPerPage: 10,
+    @for (item of datosInventariosFiltradoslista | paginate: { itemsPerPage: itemsPerPage,
     currentPage: p }; track $index;) {
     <tr>
       <td class="size-px whitespace-nowrap">
@@ -89,19 +89,28 @@
 <div
   class="px-6 py-4 grid gap-3 md:flex md:justify-between md:items-center border-t border-gray-200 dark:border-neutral-700"
 >
-  <div>
-    <p class="text-sm text-gray-600 ">
-      <span class="font-semibold text-gray-800 ">{{
-        mensajeCantidad
-      }}</span>
-    </p>
-  </div>
+<div>
+  <div class="inline-flex gap-x-2">
+    <div class="input-group mb-2">
+      <div class="dropdown mr-4">
+        <select class="form-select" (change)="onItemsPerPageChange($event)" aria-label="Default select example">
+          <option >Ítems</option>
+          <option value="5">5</option>
+          <option selected value="10">10</option>
+          <option value="15">15</option>
+          <option value="20">20</option>
+        </select>
+      </div>
+      <div class="flex items-center justify-center">
+        <pagination-controls
+        (pageChange)="p = $event"
+      ></pagination-controls>
+      </div>
 
-  <div>
-    <div class="inline-flex gap-x-2">
-      <pagination-controls (pageChange)="p = $event"></pagination-controls>
     </div>
+
   </div>
+</div>
 </div>
 
 <footer-general />
