--- a/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
+++ b/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
@@ -275,12 +275,12 @@
 
           <!-- Footer -->
           <div
-            class="px-6 py-4 grid gap-3 md:flex md:justify-between md:items-center border-t border-gray-200 dark:border-neutral-700"
+            class="px-6 py-4 grid gap-3 md:flex md:justify-between md:items-center border-t border-gray-200 "
           >
             <div>
-              <p class="text-sm text-gray-600 dark:text-neutral-400">
+              <p class="text-sm text-gray-600 ">
                 <span
-                  class="font-semibold text-gray-800 dark:text-neutral-200"
+                  class="font-semibold text-gray-800 "
                   >{{ cantidadDatosInventarioLista }}</span
                 >
                 Inventarios en total
