--- a/src/app/Ui/Modules/Asignaciones/components/tabla-inventarios-asignados/tabla-inventarios-asignados.component.html
+++ b/src/app/Ui/Modules/Asignaciones/components/tabla-inventarios-asignados/tabla-inventarios-asignados.component.html
@@ -90,6 +90,16 @@
   class="px-6 py-4 grid gap-3 md:flex md:justify-between md:items-center border-t border-gray-200 dark:border-neutral-700"
 >
 <div>
+  <p class="text-sm text-gray-600 ">
+    <span
+      class="font-semibold text-gray-800 "
+      >{{ datosInventariosFiltradoslista.length }}</span
+    >
+    Inventarios en total
+  </p>
+</div>
+
+<div>
   <div class="inline-flex gap-x-2">
     <div class="input-group mb-2">
       <div class="dropdown mr-4">
