--- a/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
@@ -85,14 +85,15 @@
 <div
   class="px-6 py-4 grid gap-3 md:flex md:justify-between md:items-center border-t border-gray-200 "
 >
-  <!-- <div>
-    <p class="text-sm text-gray-600">
-      <span class="font-semibold text-gray-800">{{
-        datosInventarioslista.length
-      }}</span>
-      Inventarios
-    </p>
-  </div> -->
+<div>
+  <p class="text-sm text-gray-600 ">
+    <span
+      class="font-semibold text-gray-800 "
+      >{{ datosInventarioslista.length }}</span
+    >
+    Inventarios en total
+  </p>
+</div>
   <div>
     <div class="inline-flex gap-x-2">
       <div class="input-group mb-2">
