--- a/src/app/Ui/Modules/Carga_Inventario/Page/registro-carga-inventarios/registro-carga-inventarios.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Page/registro-carga-inventarios/registro-carga-inventarios.component.html
@@ -10,203 +10,204 @@
 >
   <div class="modal-dialog">
     <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="staticBackdropLabel">REGISTRO INVENTARIO</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
       <div class="modal-body">
-        <div class="container-formulario">
+        <form (ngSubmit)="guardarCabecera()" [formGroup]="formularioRegistro">
+          <div class="px-4 py-0 gap-0 text-center overflow-y-auto">
 
-          <form (ngSubmit)="guardarCabecera()" [formGroup]="formularioRegistro">
-            <div class="px-4 py-1 gap-0 text-center overflow-y-auto">
+            <div class="flex-1 mt-0">
+              <div class="mb-1">
 
-              <div class="flex-1 mt-4">
-                <div class="mb-1">
-
-                  <label for="empresas" class="w-full text-left form-label">Empresas</label>
-                  <select
-                    id="empresas"
-                    formControlName="rucempresa"
-                    [(ngModel)]="Cabecera.rucempresa"
-                    class="form-select"
-                    aria-label="Default select example"
-                  >
-                    <option value="" disabled selected>
-                      Seleccione una empresa
-                    </option>
-                    @for (item of DatosEmpresas; track $index) {
-                    <option [value]="item.rucempresa">
-                      {{ item.rucempresa }} - {{ item.razonsocial }}
-                    </option>
-                    }
-                  </select>
-                </div>
-              </div>
-
-
-              <div class="flex-1">
-                <div class="mb-1">
-
-                  <label for="empresas" class="w-full text-left form-label">Asignar usuario</label>
-                  <select
-                    id="usuarioAsignar"
-                    formControlName="usuarioasignado"
-                    [(ngModel)]="Cabecera.UsuarioAsignado"
-                    class="form-select"
-                    aria-label="Default select example"
-                  >
+                <label for="empresas" class="w-full text-left form-label">Empresas</label>
+                <select
+                  id="empresas"
+                  formControlName="rucempresa"
+                  [(ngModel)]="Cabecera.rucempresa"
+                  class="form-select"
+                  aria-label="Default select example"
+                >
                   <option value="" disabled selected>
-                    Seleccione una Usuario
+                    Seleccione una empresa
                   </option>
-                    @for (item of getUsuarios_All; track $index) { @if
-                    (item.estado == '1') {
-                    <option [value]="item.idusuario">
-                      {{ item.idusuario }} - {{ item.nombreusuario }}
-                      {{ item.apellido }}
-                    </option>
-                    } }
-                  </select>
+                  @for (item of DatosEmpresas; track $index) {
+                  <option [value]="item.rucempresa">
+                    {{ item.rucempresa }} - {{ item.razonsocial }}
+                  </option>
+                  }
+                </select>
+              </div>
+            </div>
 
+
+            <div class="flex-1">
+              <div class="mb-1">
+
+                <label for="empresas" class="w-full text-left form-label">Asignar usuario</label>
+                <select
+                  id="usuarioAsignar"
+                  formControlName="usuarioasignado"
+                  [(ngModel)]="Cabecera.UsuarioAsignado"
+                  class="form-select"
+                  aria-label="Default select example"
+                >
+                <option value="" disabled selected>
+                  Seleccione una Usuario
+                </option>
+                  @for (item of getUsuarios_All; track $index) { @if
+                  (item.estado == '1') {
+                  <option [value]="item.idusuario">
+                    {{ item.idusuario }} - {{ item.nombreusuario }}
+                    {{ item.apellido }}
+                  </option>
+                  } }
+                </select>
+
+              </div>
+            </div>
+
+            <div class="flex-1 mt-1">
+              <div class="container_seleccion_archivo">
+                <!-- <h4 class="mb-0">Seleccionar archivo</h4>
+                <p>De manera rápida y fácil</p> -->
+
+                <div class="container-space-y-2">
+                  <label
+                    for="af-submit-app-upload-images"
+                    class="upload-label dark"
+                  >
+                    <input
+                      #fileInput
+                      (change)="onFileSelected($event)"
+                      id="af-submit-app-upload-images"
+                      name="af-submit-app-upload-images"
+                      type="file"
+                      accept=".xlsx, .xls"
+                      class="upload-input"
+                    />
+
+                    <svg
+                      class="upload-icon dark"
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="16"
+                      height="16"
+                      fill="currentColor"
+                      viewBox="0 0 16 16"
+                    >
+                      <path
+                        fill-rule="evenodd"
+                        d="M7.646 5.146a.5.5 0 0 1 .708 0l2 2a.5.5 0 0 1-.708.708L8.5 6.707V10.5a.5.5 0 0 1-1 0V6.707L6.354 7.854a.5.5 0 1 1-.708-.708l2-2z"
+                      />
+                      <path
+                        d="M4.406 3.342A5.53 5.53 0 0 1 8 2c2.69 0 4.923 2 5.166 4.579C14.758 6.804 16 8.137 16 9.773 16 11.569 14.502 13 12.687 13H3.781C1.708 13 0 11.366 0 9.318c0-1.763 1.266-3.223 2.942-3.593.143-.863.698-1.723 1.464-2.383zm.653.757c-.757.653-1.153 1.44-1.153 2.056v.448l-.445.049C2.064 6.805 1 7.952 1 9.318 1 10.785 2.23 12 3.781 12h8.906C13.98 12 15 10.988 15 9.773c0-1.216-1.02-2.228-2.313-2.228h-.5v-.5C12.188 4.825 10.328 3 8 3a4.53 4.53 0 0 0-2.941 1.1z"
+                      />
+                    </svg>
+
+                    @if (selectedFileName) {
+                    <span class="upload-text dark">
+                      Archivo seleccionado:
+                      <span class="upload-highlight">{{
+                        selectedFileName
+                      }}</span>
+                    </span>
+                    }@else {
+                    <span class="upload-text dark">
+                      Haz clic aquí
+                      <span class="upload-highlight"
+                        >para seleccionar su archivo</span
+                      >
+                    </span>
+                    }
+
+                    <br />
+
+                    @if (selectedFileName) {
+                    <span class="upload-help dark"
+                      >Tamaño de archivo: {{ fileDetails.size }} bytes</span
+                    >
+                    }@else {
+                    <span class="upload-help dark"
+                      >Máximo un archivo de 10 Mb</span
+                    >
+                    }
+                  </label>
                 </div>
               </div>
 
-              <div class="flex-1 mt-1">
-                <div class="container_seleccion_archivo">
-                  <!-- <h4 class="mb-0">Seleccionar archivo</h4>
-                  <p>De manera rápida y fácil</p> -->
+              <div class="containar_ver_detalle">
+                <h4 class="mb-0">
+                  Items cargados: <span> {{ cantidadDatosExcel }}</span>
+                </h4>
 
-                  <div class="container-space-y-2">
-                    <label
-                      for="af-submit-app-upload-images"
-                      class="upload-label dark"
-                    >
-                      <input
-                        #fileInput
-                        (change)="onFileSelected($event)"
-                        id="af-submit-app-upload-images"
-                        name="af-submit-app-upload-images"
-                        type="file"
-                        accept=".xlsx, .xls"
-                        class="upload-input"
-                      />
+                <button
+                  class="btn btn-primary ver_detalle"
+                  [disabled]="!HayArchivo"
+                  type="button"
+                  data-bs-toggle="offcanvas"
+                  data-bs-target="#hs-detalle-excel_preview"
+                  aria-controls="hs-detalle-excel_preview"
+                >
+                  <img src="../../../../../../assets/svg/icon_ver.svg" alt="" />
+                </button>
+              </div>
 
-                      <svg
-                        class="upload-icon dark"
-                        xmlns="http://www.w3.org/2000/svg"
-                        width="16"
-                        height="16"
-                        fill="currentColor"
-                        viewBox="0 0 16 16"
-                      >
-                        <path
-                          fill-rule="evenodd"
-                          d="M7.646 5.146a.5.5 0 0 1 .708 0l2 2a.5.5 0 0 1-.708.708L8.5 6.707V10.5a.5.5 0 0 1-1 0V6.707L6.354 7.854a.5.5 0 1 1-.708-.708l2-2z"
-                        />
-                        <path
-                          d="M4.406 3.342A5.53 5.53 0 0 1 8 2c2.69 0 4.923 2 5.166 4.579C14.758 6.804 16 8.137 16 9.773 16 11.569 14.502 13 12.687 13H3.781C1.708 13 0 11.366 0 9.318c0-1.763 1.266-3.223 2.942-3.593.143-.863.698-1.723 1.464-2.383zm.653.757c-.757.653-1.153 1.44-1.153 2.056v.448l-.445.049C2.064 6.805 1 7.952 1 9.318 1 10.785 2.23 12 3.781 12h8.906C13.98 12 15 10.988 15 9.773c0-1.216-1.02-2.228-2.313-2.228h-.5v-.5C12.188 4.825 10.328 3 8 3a4.53 4.53 0 0 0-2.941 1.1z"
-                        />
-                      </svg>
-
-                      @if (selectedFileName) {
-                      <span class="upload-text dark">
-                        Archivo seleccionado:
-                        <span class="upload-highlight">{{
-                          selectedFileName
-                        }}</span>
-                      </span>
-                      }@else {
-                      <span class="upload-text dark">
-                        Haz clic aquí
-                        <span class="upload-highlight"
-                          >para seleccionar su archivo</span
-                        >
-                      </span>
-                      }
-
-                      <br />
-
-                      @if (selectedFileName) {
-                      <span class="upload-help dark"
-                        >Tamaño de archivo: {{ fileDetails.size }} bytes</span
-                      >
-                      }@else {
-                      <span class="upload-help dark"
-                        >Máximo un archivo de 10 Mb</span
-                      >
-                      }
-                    </label>
-                  </div>
-                </div>
-
-                <div class="containar_ver_detalle">
-                  <h4 class="mb-0">
-                    Items cargados: <span> {{ cantidadDatosExcel }}</span>
-                  </h4>
+              <div class="Nombre_Inventario">
+                <label
+                  for="af-submit-project-url"
+                  class="inline-block text-sm font-medium text-gray-800 mt-2.5 "
+                >
+                  Nombre
+                </label>
+                @if (selectedFileName) {
+                <input
+                  formControlName="descripcion"
+                  [(ngModel)]="Cabecera.descripcion"
+                  id="af-submit-project-url"
+                  type="text"
+                  [value]="selectedFileName"
+                  class="py-2 px-3 pe-11 block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none "
+                  placeholder="Ingresar nombre"
+                />
+                }@else {
+                <input
+                  formControlName="descripcion"
+                  [(ngModel)]="Cabecera.descripcion"
+                  id="af-submit-project-url"
+                  type="text"
+                  [value]="selectedFileName"
+                  class="py-2 px-3 pe-11 block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none "
+                  placeholder="Ingresar nombre"
+                />
+                }
+              </div>
+              <div class="modal-footer">
+                <div class="Buttons_eventos">
+                  <button
+                  (click)="limpiarDatosPreview()"
+                    type="button"
+                    data-bs-dismiss="modal"
+                  >
+                    Cancelar
+                  </button>
 
                   <button
-                    class="btn btn-primary ver_detalle"
-                    [disabled]="!HayArchivo"
-                    type="button"
-                    data-bs-toggle="offcanvas"
-                    data-bs-target="#hs-detalle-excel_preview"
-                    aria-controls="hs-detalle-excel_preview"
+                    [disabled]="
+                      !HayArchivo ||
+                      formularioRegistro.controls['rucempresa'].invalid ||
+                      formularioRegistro.controls['descripcion'].invalid
+                    "
+                    type="submit"
+                    class="btn btn-primary"
                   >
-                    <img src="../../../../../../assets/svg/icon_ver.svg" alt="" />
+                    Guardar
                   </button>
-                </div>
-
-                <div class="Nombre_Inventario">
-                  <label
-                    for="af-submit-project-url"
-                    class="inline-block text-sm font-medium text-gray-800 mt-2.5 "
-                  >
-                    Nombre
-                  </label>
-                  @if (selectedFileName) {
-                  <input
-                    formControlName="descripcion"
-                    [(ngModel)]="Cabecera.descripcion"
-                    id="af-submit-project-url"
-                    type="text"
-                    [value]="selectedFileName"
-                    class="py-2 px-3 pe-11 block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none "
-                    placeholder="Ingresar nombre"
-                  />
-                  }@else {
-                  <input
-                    formControlName="descripcion"
-                    [(ngModel)]="Cabecera.descripcion"
-                    id="af-submit-project-url"
-                    type="text"
-                    [value]="selectedFileName"
-                    class="py-2 px-3 pe-11 block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none "
-                    placeholder="Ingresar nombre"
-                  />
-                  }
-                </div>
-                <div class="modal-footer">
-                  <div class="Buttons_eventos">
-                    <button
-                    (click)="limpiarDatosPreview()"
-                      type="button"
-                      data-bs-dismiss="modal"
-                    >
-                      Cancelar
-                    </button>
-
-                    <button
-                      [disabled]="
-                        !HayArchivo ||
-                        formularioRegistro.controls['rucempresa'].invalid ||
-                        formularioRegistro.controls['descripcion'].invalid
-                      "
-                      type="submit"
-                      class="btn btn-primary"
-                    >
-                      Guardar
-                    </button>
-                  </div>
                 </div>
               </div>
             </div>
-          </form>
-        </div>
+          </div>
+        </form>
 
       </div>
     </div>
