--- a/src/app/Ui/Modules/reportes/components/design-reporte/design-page/design-page-tabla-datos/design-page-tabla-datos.component.html
+++ b/src/app/Ui/Modules/reportes/components/design-reporte/design-page/design-page-tabla-datos/design-page-tabla-datos.component.html
@@ -1,6 +1,6 @@
 <div class="container-datos-page">
   <table mat-table [dataSource]="dataSource" matSort>
-        <!-- =================================================================================== -->
+    <!-- =================================================================================== -->
     <!-- codigogrupo -->
     <!-- =================================================================================== -->
     <ng-container matColumnDef="codigogrupo">
@@ -19,7 +19,14 @@
     <!-- =================================================================================== -->
     <ng-container matColumnDef="codigoproducto">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>codigoproducto</th>
-      <td mat-cell *matCellDef="let row">
+      <td
+        mat-cell
+        *matCellDef="let row"
+        [ngClass]="{
+          'bg-[var(--color-principal-5)] text-white': row.esnuevo == '1',
+          'bg-[var(--color-principal-4)] text-white': row.esnuevo == '0'
+        }"
+      >
         <button class="px-6 py-3 flex gap-2 align-center">
           <span class="text-sm text-gray-600 dark:text-neutral-400">
             {{ row.codigoproducto }}
@@ -33,7 +40,14 @@
     <!-- =================================================================================== -->
     <ng-container matColumnDef="codigobarra">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>codigobarra</th>
-      <td mat-cell *matCellDef="let row">
+      <td
+        mat-cell
+        *matCellDef="let row"
+        [ngClass]="{
+          'bg-[var(--color-principal-5)] text-white': row.esnuevo == '1',
+          'bg-[var(--color-principal-4)] text-white': row.esnuevo == '0'
+        }"
+      >
         <button class="px-6 py-3 flex gap-2 align-center">
           <span class="text-sm text-gray-600 dark:text-neutral-400">
             {{ row.codigobarra }}
@@ -49,7 +63,14 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         descripcionProducto
       </th>
-      <td mat-cell *matCellDef="let row">
+      <td
+        mat-cell
+        *matCellDef="let row"
+        [ngClass]="{
+          'bg-[var(--color-principal-5)] text-white': row.esnuevo == '1',
+          'bg-[var(--color-principal-4)] text-white': row.esnuevo == '0'
+        }"
+      >
         <button class="px-6 py-3 flex gap-2 align-center">
           <span class="text-sm text-gray-600 dark:text-neutral-400">
             {{ row.descripcionProducto }}
@@ -63,7 +84,14 @@
     <!-- =================================================================================== -->
     <ng-container matColumnDef="unidad">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>unidad</th>
-      <td mat-cell *matCellDef="let row">
+      <td
+        mat-cell
+        *matCellDef="let row"
+        [ngClass]="{
+          'bg-[var(--color-principal-5)] text-white': row.esnuevo == '1',
+          'bg-[var(--color-principal-4)] text-white': row.esnuevo == '0'
+        }"
+      >
         <button class="px-6 py-3 flex gap-2 align-center">
           <span class="text-sm text-gray-600 dark:text-neutral-400">
             {{ row.unidad }}
@@ -77,7 +105,14 @@
     <!-- =================================================================================== -->
     <ng-container matColumnDef="stockL">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>stockL</th>
-      <td mat-cell *matCellDef="let row">
+      <td
+        mat-cell
+        *matCellDef="let row"
+        [ngClass]="{
+          'bg-[var(--color-principal-5)] text-white': row.esnuevo == '1',
+          'bg-[var(--color-principal-4)] text-white': row.esnuevo == '0'
+        }"
+      >
         <button class="px-6 py-3 flex gap-2 align-center">
           <span class="text-sm text-gray-600 dark:text-neutral-400">
             {{ row.stockL }}
@@ -91,7 +126,14 @@
     <!-- =================================================================================== -->
     <ng-container matColumnDef="stockF">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>stockF</th>
-      <td mat-cell *matCellDef="let row">
+      <td
+        mat-cell
+        *matCellDef="let row"
+        [ngClass]="{
+          'bg-[var(--color-principal-5)] text-white': row.esnuevo == '1',
+          'bg-[var(--color-principal-4)] text-white': row.esnuevo == '0'
+        }"
+      >
         <button class="px-6 py-3 flex gap-2 align-center">
           <span class="text-sm text-gray-600 dark:text-neutral-400">
             {{ row.stockF }}
@@ -105,52 +147,60 @@
     <!-- =================================================================================== -->
     <ng-container matColumnDef="stockresultante">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>stockresultante</th>
-      <td mat-cell *matCellDef="let row">
-        <button class="px-6 py-3 flex gap-2 align-center">
-
-          @if (row.stockresultante  < 0) {
-            <span class="text-sm text-red-600 size-6">
-              {{ row.stockresultante }}
-            </span>
-          }
-
-          @if (row.stockresultante > 0) {
-            <span class="text-sm text-blue-700 size-6">
-              {{ row.stockresultante }}
-            </span>
-          }
-
-          @if (row.stockresultante == 0) {
-            <span class="text-sm text-gray-600 size-6">
-              {{ row.stockresultante }}
-            </span>
-          }
-
-        </button>
+      <td
+        mat-cell
+        *matCellDef="let row"
+        [ngClass]="{
+          'bg-[var(--color-principal-5)] text-white': row.esnuevo == '1',
+          'bg-[var(--color-principal-4)] text-white': row.esnuevo == '0'
+        }"
+      >
+      <button class="px-6 py-3 flex gap-2 align-center">
+        <span class="text-sm size-6" [ngClass]="{
+          ' text-red-600': row.stockresultante < 0,
+          ' text-blue-700': row.stockresultante > 0,
+          ' text-gray-600': row.stockresultante == 0,
+        }">
+          {{ row.stockresultante }}
+        </span>
+      </button>
       </td>
     </ng-container>
 
     <!-- =================================================================================== -->
     <!-- Almacén -->
     <!-- =================================================================================== -->
-      <ng-container matColumnDef="almacen">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header >Almacén</th>
-        <td mat-cell *matCellDef="let row">
-          <button class="px-6 py-3 flex gap-2 align-center">
-            <span class="text-sm text-gray-600 dark:text-neutral-400">
-              {{ row.almacen }}
-            </span>
-          </button>
-        </td>
-      </ng-container>
-
+    <ng-container matColumnDef="almacen">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Almacén</th>
+      <td
+        mat-cell
+        *matCellDef="let row"
+        [ngClass]="{
+          'bg-[var(--color-principal-5)] text-white': row.esnuevo == '1',
+          'bg-[var(--color-principal-4)] text-white': row.esnuevo == '0'
+        }"
+      >
+        <button class="px-6 py-3 flex gap-2 align-center">
+          <span class="text-sm text-gray-600 dark:text-neutral-400">
+            {{ row.almacen }}
+          </span>
+        </button>
+      </td>
+    </ng-container>
 
     <!-- =================================================================================== -->
     <!-- Sucursal -->
     <!-- =================================================================================== -->
     <ng-container matColumnDef="sucursal">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header >Sucursal</th>
-      <td mat-cell *matCellDef="let row">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Sucursal</th>
+      <td
+        mat-cell
+        *matCellDef="let row"
+        [ngClass]="{
+          'bg-[var(--color-principal-5)] text-white': row.esnuevo == '1',
+          'bg-[var(--color-principal-4)] text-white': row.esnuevo == '0'
+        }"
+      >
         <button class="px-6 py-3 flex gap-2 align-center">
           <span class="text-sm text-gray-600 dark:text-neutral-400">
             {{ row.sucursal }}
@@ -163,8 +213,15 @@
     <!-- Zona -->
     <!-- =================================================================================== -->
     <ng-container matColumnDef="zona">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header >Zona</th>
-      <td mat-cell *matCellDef="let row">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Zona</th>
+      <td
+        mat-cell
+        *matCellDef="let row"
+        [ngClass]="{
+          'bg-[var(--color-principal-5)] text-white': row.esnuevo == '1',
+          'bg-[var(--color-principal-4)] text-white': row.esnuevo == '0'
+        }"
+      >
         <button class="px-6 py-3 flex gap-2 align-center">
           <span class="text-sm text-gray-600 dark:text-neutral-400">
             {{ row.zona }}
@@ -177,8 +234,15 @@
     <!-- Pasillo -->
     <!-- =================================================================================== -->
     <ng-container matColumnDef="pasillo">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header >Pasillo</th>
-      <td mat-cell *matCellDef="let row">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Pasillo</th>
+      <td
+        mat-cell
+        *matCellDef="let row"
+        [ngClass]="{
+          'bg-[var(--color-principal-5)] text-white': row.esnuevo == '1',
+          'bg-[var(--color-principal-4)] text-white': row.esnuevo == '0'
+        }"
+      >
         <button class="px-6 py-3 flex gap-2 align-center">
           <span class="text-sm text-gray-600 dark:text-neutral-400">
             {{ row.pasillo }}
@@ -192,7 +256,14 @@
     <!-- =================================================================================== -->
     <ng-container matColumnDef="rack">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Rack</th>
-      <td mat-cell *matCellDef="let row">
+      <td
+        mat-cell
+        *matCellDef="let row"
+        [ngClass]="{
+          'bg-[var(--color-principal-5)] text-white': row.esnuevo == '1',
+          'bg-[var(--color-principal-4)] text-white': row.esnuevo == '0'
+        }"
+      >
         <button class="px-6 py-3 flex gap-2 align-center">
           <span class="text-sm text-gray-600 dark:text-neutral-400">
             {{ row.rack }}
@@ -206,7 +277,14 @@
     <!-- =================================================================================== -->
     <ng-container matColumnDef="ubicacion">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Ubicación</th>
-      <td mat-cell *matCellDef="let row">
+      <td
+        mat-cell
+        *matCellDef="let row"
+        [ngClass]="{
+          'bg-[var(--color-principal-5)] text-white': row.esnuevo == '1',
+          'bg-[var(--color-principal-4)] text-white': row.esnuevo == '0'
+        }"
+      >
         <button class="px-6 py-3 flex gap-2 align-center">
           <span class="text-sm text-gray-600 dark:text-neutral-400">
             {{ row.ubicacion }}
@@ -220,7 +298,14 @@
     <!-- =================================================================================== -->
     <ng-container matColumnDef="esagrupado">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>esagrupado</th>
-      <td mat-cell *matCellDef="let row">
+      <td
+        mat-cell
+        *matCellDef="let row"
+        [ngClass]="{
+          'bg-[var(--color-principal-5)] text-white': row.esnuevo == '1',
+          'bg-[var(--color-principal-4)] text-white': row.esnuevo == '0'
+        }"
+      >
         <button class="px-6 py-3 flex gap-2 align-center">
           <span class="text-sm text-gray-600 dark:text-neutral-400">
             {{ row.esagrupado }}
@@ -229,7 +314,6 @@
       </td>
     </ng-container>
 
-
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
@@ -237,9 +321,5 @@
   <!-- =================================================================================== -->
   <!-- PAGINACIÓN INVENTARIO -->
   <!-- =================================================================================== -->
-  <mat-paginator
-    [pageSizeOptions]="[50]"
-    aria-label="Select page of users"
-  />
-
+  <mat-paginator [pageSizeOptions]="[50]" aria-label="Select page of users" />
 </div>
